# legal-ai-agent

./: .env.example  .gitignore  .prettierignore  README.md  biome.json  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
apps/ai/: README.md  pyproject.toml
apps/ai/evals/: README.md  dataset.jsonl  run.py  sync_dataset.py
apps/ai/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
apps/ai/scripts/: make_sample_pdf.py
apps/ai/src/: config.py  main.py
apps/ai/src/agents/: contract_draft.py  contract_draft_v2.py  contract_review.py  legal_chat.py  research_agent.py
apps/ai/src/ingest/: chunker.py  egov.py  egov_client.py  embedder.py  laws_allowlist.txt
apps/ai/src/observability/: __init__.py  langfuse_client.py
apps/ai/src/prompts/: contract_draft_generate.md  contract_draft_hearing.md  contract_draft_review.md  contract_draft_revise.md  contract_review.md  legal_chat.md
apps/ai/src/rag/: README.md  db.py  formatter.py  retriever.py
apps/ai/src/routers/: contract_draft.py  contract_draft_v2.py  contract_review.py  legal_chat.py  research.py
apps/ai/src/utils/: pdf.py
apps/ai/tests/: conftest.py  test_chunker.py  test_legal_chat_with_rag.py  test_research_agent.py  test_retriever.py  test_retriever_rerank.py  test_smoke.py
apps/ai/tests/fixtures/: sample_law.xml
apps/backend/: drizzle.config.ts  package.json  tsconfig.build.json  tsconfig.json
apps/frontend/: package.json  (+2 more)
docker/: docker-compose.langfuse.yml  docker-compose.yml
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+25 files in other folders)
